react_webviews/src/freedom_plan/mini-components/mini-components.scss
.select-freedom-plan {
  .wv-bc-left .wv-bcl-subtitle {
    margin: 0px;
  }

  .select-freedom-plan-container {
    .sfpc-loader {
      height: 50px !important;
      margin: 0px 0px 10px !important;
    }

    .freedom-plan-option {
      border: 1px solid #dcdee6;
      border-radius: 12px;
      font-weight: 500;
      font-size: 12px;
      line-height: 19px;
      color: var(--gunmetal);
      display: flex;
      align-items: center;
      padding: 15px 20px;
      position: relative;
      margin-bottom: 10px;
      cursor: pointer;

      .selected-icon {
        position: absolute;
        width: 22px !important;
        height: 22px !important;
        top: -11px;
        right: -2px;
      }

      .fpo-name {
        text-transform: uppercase;
      }

      .fpo-amount {
        font-size: 16px;
        line-height: 21px;
        color: var(--primary);
        padding-left: 10px;
      }

      .fpo-popular {
        position: absolute;
        top: -11px;
        left: 20px;
        background: #ffe0ec;
        border-radius: 10px;
        font-weight: bold;
        font-size: 8px;
        color: #ba3366;
        width: 72px;
        text-align: center;
      }
    }

    .selected-plan {
      border: 2px solid var(--primary);
    }

    .popular-plan {
      margin-top: 20px;
    }
  }

  .helper-note {
    font-size: 11px;
    color: var(--steelgrey);
    padding-bottom: 13px;
  }

  .error-message {
    color: var(--red);
  }
}

.freedom-plan-terms-n-conditions {
  color: var(--steelgrey);
  font-size: 11px;
  line-height: 18px;

  .fp-tnc-left {
    min-width: 15px;
    margin-right: 5px;
    text-align: right;
  }
}

.fp-tnc-title {
  font-size: 17px;
}

